ansible/roles/test/files/net-tool.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: network-multitool
  labels:
    tier: node
    app: network-multitool
spec:
  selector:
    matchLabels:
      tier: node
      app: network-multitool
  template:
    metadata:
      labels:
        tier: node
        app: network-multitool
    spec:
      hostNetwork: true
      tolerations:
      - operator: Exists
        effect: NoSchedule
      containers:
      - name: network-multitool
        image: wbitt/network-multitool:alpine-extra
        env:
        - name: HTTP_PORT
          value: "1180"
        - name: HTTPS_PORT
          value: "11443"
        ports:
        - containerPort: 1180
          name: http-port
        - containerPort: 11443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: network-multitool-service
spec:
  type: ClusterIP
  selector:
    app: network-multitool
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: container-http
    port: 1180
    targetPort: 1180
  - name: container-https
    port: 11443
    targetPort: 11443
